# Compilator

./: .gitignore  ASTPrinter.cpp  ASTPrinter.h  CMakeLists.txt  CodeFragment.h  MiniJava.Lexer.cpp  MiniJava.Lexer.h  MiniJava.Parser.yy  Printer.cpp  Printer.h  Printer_graph.cpp  Printer_graph.h  README.md  Visitor.h  autotests.sh  build.sh  init.sh  lexer.l  main.cpp  makefile  mini_scanner.cpp  mj_driver.cpp  mj_driver.hpp  mj_scanner.hpp  output.txt  parser.l  parser.y  simple_tests.sh
AST/: ClassDeclaration.cpp  ClassDeclaration.h  ClassDeclaration.hpp  Expression.cpp  Expression.h  Expressions.cpp  Expressions.h  Expressions.hpp  Goal.cpp  Goal.h  Goal.hpp  INode.h  Identifier.cpp  Identifier.h  Identifier.hpp  Interfaces.h  Interfaces.hpp  MainClass.cpp  MainClass.h  MainClass.hpp  MethodDeclaration.cpp  MethodDeclaration.h  MethodDeclaration.hpp  Statement.cpp  Statement.h  Statements.cpp  Statements.h  Statements.hpp  Type.cpp  Type.h  Types.cpp  Types.h  Types.hpp  VarDeclaration.cpp  VarDeclaration.h  VarDeclaration.hpp
ActivationRecords/: IAccess.h  IFrame.h  InFrameAccess.cpp  InFrameAccess.h  InRegAccess.cpp  InRegAccess.h  X86MiniJavaFrame.cpp  X86MiniJavaFrame.h
IRTree/: CodeFragment.cpp  CodeFragment.h  Expression.cpp  Expression.h  IRExpression.h  IRPrinter.cpp  IRPrinter.h  IRStatement.h  IRVisitor.h  Label.cpp  Label.h  Statement.cpp  Statement.h  SubTreeWrapper.cpp  SubTreeWrapper.h  Translator.cpp  Translator.h
SymbolTable/: ClassInfo.cpp  ClassInfo.h  ClassInfo.hpp  MethodInfo.cpp  MethodInfo.h  MethodInfo.hpp  Symbol.cpp  Symbol.h  Symbol.hpp  (+10 more)
(+18 files in other folders)
